[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/gui/main_menu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Bungee/Bungee-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/gui/components/background/BG.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/gui/components/Button.tscn" type="PackedScene" id=5]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform vec2 fade_range = vec2(0.0, 1.0);
uniform vec2 fade_pos = vec2(0.5);
uniform vec2 shadow_range = vec2(0.0, 0.0);
uniform vec4 shadow_color: hint_color = vec4(0.0, 0.0, 0.0, 1.0);

void fragment() {
	COLOR.a = 1.0-smoothstep(fade_range.x, fade_range.y, distance(UV.xy, fade_pos));
	
	float shadow = smoothstep(shadow_range.y, shadow_range.x, distance(UV.xy, fade_pos));
	COLOR.rgb = mix(COLOR.rgb, shadow_color.rgb, (1.0-shadow) * shadow_color.a);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 5 )
shader_param/fade_range = Vector2( 0.478, 0.482 )
shader_param/fade_pos = Vector2( 0.5, 0.5 )
shader_param/shadow_range = Vector2( 0, 0 )
shader_param/shadow_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.8, 0.16, 0.330667, 1 )

[sub_resource type="DynamicFont" id=1]
size = 96
outline_size = 12
outline_color = Color( 0.2, 0.2, 0.2, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BG" parent="." instance=ExtResource( 4 )]

[node name="PanelContainer" type="PanelContainer" parent="."]
material = SubResource( 3 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -750.0
margin_top = -471.0
margin_right = 352.0
margin_bottom = 568.0
custom_styles/panel = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 64
custom_constants/margin_top = 32
custom_constants/margin_left = 64
custom_constants/margin_bottom = 32

[node name="Label" type="Label" parent="MarginContainer"]
margin_left = 64.0
margin_top = 32.0
margin_right = 763.0
margin_bottom = 129.0
custom_colors/font_color = Color( 0.443137, 0.866667, 0.745098, 1 )
custom_fonts/font = SubResource( 1 )
text = "Cash Is King"

[node name="ButtonList" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.99
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -466.0
margin_top = -348.0
margin_right = -158.8
margin_bottom = -54.0
grow_horizontal = 0
grow_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayBtn" parent="ButtonList" instance=ExtResource( 5 )]
margin_left = 122.0
margin_top = 86.0
margin_right = 185.0
margin_bottom = 126.0
text = "Play"

[node name="SettingBtn" parent="ButtonList" instance=ExtResource( 5 )]
margin_left = 104.0
margin_top = 130.0
margin_right = 202.0
margin_bottom = 170.0
text = "Setting"

[node name="ExitBtn" parent="ButtonList" instance=ExtResource( 5 )]
margin_left = 124.0
margin_top = 174.0
margin_right = 182.0
margin_bottom = 214.0
text = "Exit"

[connection signal="pressed" from="ButtonList/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="ButtonList/SettingBtn" to="." method="_on_SettingBtn_pressed"]
[connection signal="pressed" from="ButtonList/ExitBtn" to="." method="_on_ExitBtn_pressed"]
